--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,32 @@
-title: AToM: Activity-based and agent-based Transport model of Melbourne
+title: AToM
+author:
+  name: jxafshin
+  email: jxafshin@gmail.com
+description: > # this means to ignore newlines until "show_excerpts:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+show_excerpts: false # set to true to show excerpts on the homepage
 
+# Minima date format
+# refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
+minima:
+  date_format: "%b %-d, %Y"
+
+  # generate social links in footer
+  social_links:
+
+    - { platform: github,         user_url: "https://github.com/matsim-melbourne" }
+
+
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+#header_pages:
+# - about.md
+
+# Build settings
 theme: minima
+
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
